--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -558,6 +558,7 @@ set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.7.33.146;
 set_real_ip_from 185.82.219.109;
+set_real_ip_from 185.84.31.254;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.239.191.25;
@@ -651,7 +652,6 @@ set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
-set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
@@ -971,6 +971,7 @@ set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
+set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
@@ -1035,6 +1036,7 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f9f3:0:2::319;
+set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1308,6 +1310,7 @@ set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -1913,6 +1916,7 @@ set_real_ip_from 89.221.215.139;
 set_real_ip_from 89.221.217.206;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.36.231.128;
+set_real_ip_from 89.37.95.34;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
 set_real_ip_from 91.132.144.59;
