Update lists at 20250228-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,6 +130,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
@@ -236,9 +237,7 @@ deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
-deny 2620:18c:0:192::171;
 deny 2620:18c:0:192::172;
-deny 2620:18c:0:192::173;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
 deny 2620:7:6001::103;
