--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -304,6 +304,7 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
+allow 185.168.194.63;
 allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
@@ -565,6 +566,7 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 188.68.52.247;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -950,6 +952,7 @@ allow 209.141.54.218;
 allow 209.141.55.26;
 allow 209.141.58.254;
 allow 209.141.61.52;
+allow 212.104.141.101;
 allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
@@ -959,9 +962,8 @@ allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
-allow 23.129.64.171;
 allow 23.129.64.172;
-allow 23.129.64.173;
+allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
@@ -1034,6 +1036,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:f704:10::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1140,9 +1143,7 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
-allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
-allow 2620:18c:0:192::173;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -1757,7 +1758,6 @@ allow 45.66.35.32;
 allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
-allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
