--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -304,6 +304,7 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
+set_real_ip_from 185.168.194.63;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
@@ -565,6 +566,7 @@ set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
+set_real_ip_from 188.68.52.247;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -950,6 +952,7 @@ set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
 set_real_ip_from 209.141.61.52;
+set_real_ip_from 212.104.141.101;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
@@ -959,9 +962,8 @@ set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.199.199.250;
-set_real_ip_from 23.129.64.171;
 set_real_ip_from 23.129.64.172;
-set_real_ip_from 23.129.64.173;
+set_real_ip_from 23.133.204.10;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
@@ -1034,6 +1036,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:f704:10::1;
 set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1140,9 +1143,7 @@ set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
-set_real_ip_from 2620:18c:0:192::171;
 set_real_ip_from 2620:18c:0:192::172;
-set_real_ip_from 2620:18c:0:192::173;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
 set_real_ip_from 2620:7:6001::103;
@@ -1757,7 +1758,6 @@ set_real_ip_from 45.66.35.32;
 set_real_ip_from 45.66.35.33;
 set_real_ip_from 45.66.35.34;
 set_real_ip_from 45.66.35.35;
-set_real_ip_from 45.78.44.215;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.23;
