--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -2,6 +2,7 @@ allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
 allow 102.211.56.102;
+allow 102.211.56.12;
 allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
@@ -240,6 +241,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.30.244.32;
 allow 179.35.5.78;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -570,6 +572,7 @@ allow 188.68.52.247;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
+allow 192.108.48.150;
 allow 192.210.160.31;
 allow 192.210.214.10;
 allow 192.210.255.47;
@@ -700,7 +703,6 @@ allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
-allow 198.98.60.90;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.195.249.214;
@@ -735,6 +737,7 @@ allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
+allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -962,7 +965,9 @@ allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
+allow 23.129.64.171;
 allow 23.129.64.172;
+allow 23.129.64.173;
 allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -979,7 +984,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1143,7 +1147,9 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
+allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
+allow 2620:18c:0:192::173;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -1332,7 +1338,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1576,6 +1581,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1683,6 +1689,7 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:12::c0ff:ee;
 allow 2c0f:6c0:0:12::face:b00c;
+allow 2c0f:6c0:0:2::6983;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.44.238.25;
@@ -1709,6 +1716,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1788,9 +1796,9 @@ allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
+allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.161.43;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1813,7 +1821,6 @@ allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1931,6 +1938,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.237.39;
+allow 91.229.239.28;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
