--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -24,6 +24,7 @@ deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
+deny 2001:638:301:f732::150;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
@@ -237,7 +238,9 @@ deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
+deny 2620:18c:0:192::171;
 deny 2620:18c:0:192::172;
+deny 2620:18c:0:192::173;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
 deny 2620:7:6001::103;
@@ -425,7 +428,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -669,6 +671,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1004::a2;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
@@ -776,3 +779,4 @@ deny 2a12:a800:2:1:45:80:158:69;
 deny 2a13:d207:0:461::1;
 deny 2c0f:6c0:0:12::c0ff:ee;
 deny 2c0f:6c0:0:12::face:b00c;
+deny 2c0f:6c0:0:2::6983;
