Update lists at 20250228-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,9 +1,6 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
-allow 102.211.56.102;
-allow 102.211.56.12;
-allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.146.203.11;
@@ -126,7 +123,8 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.15.13.23;
+allow 118.15.11.60;
+allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -170,6 +168,7 @@ allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
 allow 156.229.233.92;
+allow 157.180.23.34;
 allow 158.220.123.219;
 allow 158.69.252.116;
 allow 159.89.124.116;
@@ -704,7 +703,6 @@ allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
-allow 198.98.60.90;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.195.249.214;
@@ -821,6 +819,7 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1004,6 +1003,7 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
@@ -1029,6 +1029,7 @@ allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
+allow 2.58.56.233;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
@@ -1266,6 +1267,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
+allow 2a01:4f9:c013:1088::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1642,6 +1644,7 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
+allow 2a12:a800:1:1:2:58:56:233;
 allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
@@ -1689,9 +1692,6 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
-allow 2c0f:6c0:0:12::c0ff:ee;
-allow 2c0f:6c0:0:12::face:b00c;
-allow 2c0f:6c0:0:2::6983;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.44.238.25;
@@ -1822,6 +1822,7 @@ allow 5.181.80.107;
 allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.230.174.6;
 allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.103.235;
@@ -1940,6 +1941,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.237.39;
+allow 91.229.239.28;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
