--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -106,6 +106,7 @@ deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:3514::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -354,6 +355,7 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:4f9:2b:75d::124:148;
+deny 2a01:4f9:c013:1088::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -730,6 +732,7 @@ deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
+deny 2a12:a800:1:1:2:58:56:233;
 deny 2a12:a800:1:1:2:58:56:35;
 deny 2a12:a800:1:1:2:58:56:43;
 deny 2a12:a800:2:1:185:241:208:115;
@@ -777,6 +780,3 @@ deny 2a12:a800:2:1:45:80:158:23;
 deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
 deny 2a13:d207:0:461::1;
-deny 2c0f:6c0:0:12::c0ff:ee;
-deny 2c0f:6c0:0:12::face:b00c;
-deny 2c0f:6c0:0:2::6983;
