Update lists at 20250301-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -125,6 +125,7 @@ deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
+deny 2600:3c03::f03c:95ff:fef5:a5a5;
 deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
@@ -222,8 +223,8 @@ deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:6400:d814:1d1::100;
-deny 2605:a140:2236:4415::1;
 deny 2605:aa80:0:9::3;
+deny 2605:e440:2::1:36e;
 deny 2607:5300:120:c74::1;
 deny 2607:5300:201:3100::35c5;
 deny 2607:5300:205:200::4894;
