--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -2,6 +2,7 @@ set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 102.211.56.102;
+set_real_ip_from 102.211.56.250;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.146.203.11;
@@ -16,6 +17,7 @@ set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
+set_real_ip_from 104.200.28.212;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -193,6 +195,7 @@ set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
+set_real_ip_from 166.1.22.139;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
@@ -239,7 +242,6 @@ set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.29.157.139;
 set_real_ip_from 179.35.5.78;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
@@ -666,7 +668,6 @@ set_real_ip_from 194.53.137.156;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
-set_real_ip_from 195.26.245.180;
 set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
 set_real_ip_from 195.47.238.178;
@@ -685,7 +686,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.144.178.185;
 set_real_ip_from 198.144.178.187;
-set_real_ip_from 198.167.206.132;
+set_real_ip_from 198.167.206.138;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -980,6 +981,7 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
+set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -998,7 +1000,6 @@ set_real_ip_from 23.154.177.29;
 set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
-set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
@@ -1030,6 +1031,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
+set_real_ip_from 2600:3c03::f03c:95ff:fef5:a5a5;
 set_real_ip_from 2600:3c09::f03c:95ff:fe2d:cc40;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
@@ -1127,8 +1129,8 @@ set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:6400:d814:1d1::100;
-set_real_ip_from 2605:a140:2236:4415::1;
 set_real_ip_from 2605:aa80:0:9::3;
+set_real_ip_from 2605:e440:2::1:36e;
 set_real_ip_from 2607:5300:120:c74::1;
 set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:205:200::4894;
