--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -505,7 +505,6 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
-allow 185.224.0.21;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.225.71.14;
@@ -961,9 +960,6 @@ allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
-allow 23.129.64.171;
-allow 23.129.64.172;
-allow 23.129.64.173;
 allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -976,10 +972,10 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
-allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -999,6 +995,7 @@ allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.191.200.2;
@@ -1140,9 +1137,6 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
-allow 2620:18c:0:192::171;
-allow 2620:18c:0:192::172;
-allow 2620:18c:0:192::173;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -1333,6 +1327,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1342,6 +1337,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1816,6 +1812,7 @@ allow 5.230.174.6;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1888,6 +1885,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
