--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -236,9 +236,6 @@ deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
-deny 2620:18c:0:192::171;
-deny 2620:18c:0:192::172;
-deny 2620:18c:0:192::173;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
 deny 2620:7:6001::103;
@@ -428,6 +425,7 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -437,6 +435,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
