Update lists at 20250302-0900

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -780,3 +780,4 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
+allow 2c0f:6c0:0:2::6983;
