--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -2,6 +2,7 @@ set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 102.211.56.102;
+set_real_ip_from 102.211.56.12;
 set_real_ip_from 102.211.56.250;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
@@ -973,7 +974,6 @@ set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
-set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
@@ -1684,6 +1684,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:23;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a13:d207:0:461::1;
+set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.44.238.25;
