Update lists at 20250303-0600

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -228,6 +228,7 @@ deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.58.100.98;
 deny 176.58.121.177;
+deny 176.65.143.138;
 deny 176.97.114.202;
 deny 178.162.197.91;
 deny 178.17.170.144;
@@ -1004,7 +1005,6 @@ deny 23.191.200.6;
 deny 23.236.122.193;
 deny 23.94.211.25;
 deny 23.94.36.167;
-deny 23.94.98.29;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
@@ -1573,6 +1573,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1004::a2;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
@@ -1703,6 +1704,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
