--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -228,6 +228,7 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.65.143.138;
 allow 176.97.114.202;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -1004,7 +1005,6 @@ allow 23.191.200.6;
 allow 23.236.122.193;
 allow 23.94.211.25;
 allow 23.94.36.167;
-allow 23.94.98.29;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -1573,6 +1573,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1703,6 +1704,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
