--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -228,6 +228,7 @@ set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
+set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -1004,7 +1005,6 @@ set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.236.122.193;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.167;
-set_real_ip_from 23.94.98.29;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
@@ -1573,6 +1573,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1004::a2;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1703,6 +1704,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
