--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -235,7 +235,6 @@ set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
-set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.246;
@@ -958,6 +957,7 @@ set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.199.199.250;
+set_real_ip_from 23.133.204.10;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
@@ -1032,6 +1032,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:f704:10::1;
 set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1242,7 +1243,6 @@ set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
-set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:4d80::1;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1572,6 +1572,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1004::a2;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1702,6 +1703,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
