--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -3,6 +3,7 @@ allow 102.130.117.167;
 allow 102.130.127.117;
 allow 102.211.56.102;
 allow 102.211.56.12;
+allow 102.211.56.13;
 allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
@@ -32,7 +33,6 @@ allow 104.244.74.97;
 allow 104.244.75.140;
 allow 104.244.75.74;
 allow 104.244.76.237;
-allow 104.244.77.192;
 allow 104.244.77.208;
 allow 104.244.78.162;
 allow 104.244.78.232;
@@ -152,6 +152,7 @@ allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.55;
 allow 144.172.118.73;
+allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -225,6 +226,7 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -233,7 +235,6 @@ allow 176.65.143.138;
 allow 176.97.114.202;
 allow 178.162.197.91;
 allow 178.17.170.144;
-allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
 allow 178.175.148.209;
@@ -243,6 +244,7 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
+allow 178.29.168.188;
 allow 179.35.5.78;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -518,6 +520,7 @@ allow 185.241.208.115;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
 allow 185.241.208.92;
@@ -925,6 +928,7 @@ allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
+allow 205.185.113.8;
 allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
@@ -939,6 +943,7 @@ allow 209.141.32.198;
 allow 209.141.34.15;
 allow 209.141.37.94;
 allow 209.141.40.68;
+allow 209.141.45.141;
 allow 209.141.46.203;
 allow 209.141.51.180;
 allow 209.141.54.203;
@@ -1065,7 +1070,6 @@ allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
-allow 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
 allow 2605:6400:30:e948:4cee:191b:1e55:25b3;
 allow 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 allow 2605:6400:30:ea58:51a1:e174:d185:d6f1;
@@ -1240,7 +1244,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:4d80::1;
@@ -1325,7 +1328,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1376,6 +1378,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1572,7 +1575,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1659,12 +1661,16 @@ allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
+allow 2a12:a800:2:1:45:141:215:17;
+allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:28;
+allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
 allow 2a12:a800:2:1:45:141:215:62;
 allow 2a12:a800:2:1:45:141:215:63;
+allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:81;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
@@ -1676,6 +1682,7 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.44.238.25;
@@ -1703,7 +1710,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1723,12 +1729,16 @@ allow 45.141.215.114;
 allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
+allow 45.141.215.17;
+allow 45.141.215.19;
 allow 45.141.215.21;
 allow 45.141.215.28;
+allow 45.141.215.40;
 allow 45.141.215.56;
 allow 45.141.215.61;
 allow 45.141.215.62;
 allow 45.141.215.63;
+allow 45.141.215.80;
 allow 45.141.215.81;
 allow 45.141.215.88;
 allow 45.141.215.90;
@@ -1782,7 +1792,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.140.3;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1807,7 +1816,6 @@ allow 5.230.174.6;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1886,7 +1894,6 @@ allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
-allow 85.209.128.250;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
