--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -165,7 +165,6 @@ allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
-allow 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
 allow 2605:6400:30:e948:4cee:191b:1e55:25b3;
 allow 2605:6400:30:ea52:4246:fb82:f36c:8ede;
 allow 2605:6400:30:ea58:51a1:e174:d185:d6f1;
@@ -339,7 +338,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:4d80::1;
@@ -424,7 +422,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -475,6 +472,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -671,7 +669,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -758,12 +755,16 @@ allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
+allow 2a12:a800:2:1:45:141:215:17;
+allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:28;
+allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
 allow 2a12:a800:2:1:45:141:215:62;
 allow 2a12:a800:2:1:45:141:215:63;
+allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:81;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
@@ -775,3 +776,4 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:3::479d;
