--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -263,7 +263,6 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.200.228;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -1017,6 +1016,7 @@ allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1054,6 +1054,7 @@ allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:f704:10::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
@@ -1280,7 +1281,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
-allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1811,6 +1811,7 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
+allow 46.195.146.15;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1933,7 +1934,6 @@ allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.111.87;
-allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.36.231.128;
