Update lists at 20250307-0600

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -927,6 +927,7 @@ allow 2.58.56.12;
 allow 2.58.56.220;
 allow 2.58.56.233;
 allow 2.58.56.35;
+allow 2.58.56.43;
 allow 27.255.75.198;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -956,6 +957,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
