--- a/deny-tor_ips_v4.conf
+++ b/deny-tor_ips_v4.conf
@@ -927,6 +927,7 @@ deny 2.58.56.12;
 deny 2.58.56.220;
 deny 2.58.56.233;
 deny 2.58.56.35;
+deny 2.58.56.43;
 deny 27.255.75.198;
 deny 31.129.22.65;
 deny 31.133.0.210;
@@ -956,6 +957,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
