--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -665,6 +665,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -725,6 +726,7 @@ deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
 deny 2a12:a800:1:1:2:58:56:35;
+deny 2a12:a800:1:1:2:58:56:43;
 deny 2a12:a800:2:1:185:241:208:115;
 deny 2a12:a800:2:1:185:241:208:202;
 deny 2a12:a800:2:1:185:241:208:204;
