--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -927,6 +927,7 @@ set_real_ip_from 2.58.56.12;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.233;
 set_real_ip_from 2.58.56.35;
+set_real_ip_from 2.58.56.43;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -956,6 +957,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
