--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -200,7 +200,6 @@ deny 161.97.71.11;
 deny 162.210.173.17;
 deny 162.216.18.62;
 deny 162.247.72.192;
-deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -557,7 +556,6 @@ deny 185.246.128.161;
 deny 185.246.188.149;
 deny 185.246.188.73;
 deny 185.246.188.74;
-deny 185.246.189.140;
 deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
@@ -696,6 +694,7 @@ deny 194.163.130.99;
 deny 194.163.157.49;
 deny 194.26.192.77;
 deny 194.53.137.156;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.47.238.176;
@@ -1087,7 +1086,6 @@ deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -1370,7 +1368,6 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:7025::1;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1606,6 +1603,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1668,6 +1666,7 @@ deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
@@ -1740,7 +1739,6 @@ deny 38.242.254.131;
 deny 38.75.136.144;
 deny 38.97.116.244;
 deny 40.160.3.1;
-deny 43.207.210.55;
 deny 45.11.229.132;
 deny 45.11.59.28;
 deny 45.118.133.44;
@@ -1748,6 +1746,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1921,6 +1920,7 @@ deny 81.17.28.95;
 deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
+deny 82.118.248.205;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
@@ -1928,7 +1928,6 @@ deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
@@ -1959,6 +1958,7 @@ deny 89.37.95.34;
 deny 89.58.26.216;
 deny 89.58.41.156;
 deny 91.132.144.59;
+deny 91.139.160.150;
 deny 91.202.5.104;
 deny 91.203.144.194;
 deny 91.203.145.116;
