--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -148,7 +148,6 @@ deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -430,7 +429,6 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:7025::1;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -666,6 +664,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -728,6 +727,7 @@ deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
