Update lists at 20250309-1801

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -43,6 +43,7 @@ deny 104.244.78.162;
 deny 104.244.78.232;
 deny 104.244.78.233;
 deny 104.244.78.26;
+deny 104.244.79.236;
 deny 104.244.79.44;
 deny 104.244.79.50;
 deny 104.244.79.61;
@@ -712,7 +713,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.134;
+deny 198.167.206.139;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1024,7 +1025,6 @@ deny 23.154.177.29;
 deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
-deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.13;
@@ -1602,6 +1602,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1743,6 +1744,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
