--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -245,11 +245,13 @@ deny 173.212.239.46;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.134.61;
+deny 176.65.143.138;
 deny 176.65.144.142;
 deny 176.65.144.94;
 deny 176.97.114.202;
@@ -1352,7 +1354,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1405,6 +1406,7 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1847,7 +1849,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
