--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -15,9 +15,6 @@ allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
-allow 104.167.242.116;
-allow 104.167.242.117;
-allow 104.167.242.118;
 allow 104.192.3.74;
 allow 104.200.28.212;
 allow 104.219.236.100;
@@ -171,7 +168,6 @@ allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.55;
 allow 144.172.118.73;
-allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -1012,7 +1008,6 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1087,7 +1082,6 @@ allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
@@ -1360,6 +1354,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1608,7 +1603,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1749,7 +1743,6 @@ allow 45.128.133.242;
 allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1855,6 +1848,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1901,6 +1895,7 @@ allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
 allow 67.219.109.141;
+allow 67.84.26.102;
 allow 70.34.249.72;
 allow 71.19.144.106;
 allow 72.14.179.10;
